# tabletalks

./: .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
tabletalks/: settings.py  urls.py  wsgi.py
tabletalks/base/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
tabletalks/base/migrations/: 0001_initial.py  0002_auto_20211024_1105.py  0003_auto_20211026_1009.py
tabletalks/base/templates/base/: activity_component.html  delete.html  feed_component.html  home.html  login_register.html  profile.html  table.html  table_form.html  topics_component.html
tabletalks/static/styles/: main.css
tabletalks/tabletalks/: settings.py  urls.py
tabletalks/templates/: home.html  main.html  navbar.html  table.html
